--- a/tmpFolder/.vscode/settings.json
+++ b/tmpFolder/.vscode/settings.json
@@ -67,6 +67,10 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "xlocbuf": "cpp",
-        "xlocmes": "cpp"
+        "xlocmes": "cpp",
+        "functional": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
+        "xhash": "cpp"
     }
 }
